--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.suo
+HelloWorld/HelloWorld/bin/Debug/HelloWorld.exe
+*.config
+HelloWorld/HelloWorld/bin/Debug/HelloWorld.pdb
+*.exe
+HelloWorld/HelloWorld/bin/Debug/HelloWorld.vshost.exe.manifest
+*.cache
+HelloWorld/HelloWorld/obj/Debug/HelloWorld.pdb
+HelloWorld/HelloWorld/obj/Debug/HelloWorld.csproj.FileListAbsolute.txt
